Solved some alignment problems

--- a/assets/css/app.less
+++ b/assets/css/app.less
@@ -12,6 +12,10 @@ h1, h2, h3, h4, h5, h6 {
 	padding: 15px !important;
 }
 
+.l-h {
+	line-height: 5px !important;
+}
+
 .m-r-lg {
 	margin-right: 30px;
 }
@@ -169,6 +173,7 @@ hr {
 			left: 0;
 			background: #fff;
 			padding: 20px;
+			overflow: scroll;
 		}	
 
 		.hospitalDetails.ng-hide-add {
@@ -246,12 +251,12 @@ hr {
 	z-index: 9999;
 	border: 1px solid #DEE5E7;
 	background: #fff;
-	width: 80%;
+	width: 82%;
 
 	li {
 		list-style: none;
 		color: rgba(0,0,0,0.36);
-		padding: 5px;
+		padding: 10px;
 		font-size: 10px;
 		font-weight: bold;
 		letter-spacing: 0.06;
